# ActiveLabelingSystem

./: .gitignore  GUID.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml
datasets/: manifest.json
datasets/v_20260325_075308/: data.yaml  metadata.json
datasets/v_20260325_075308/labels/: 3a1c152dc8ad5183843a990c44355538_result_png.rf.8baab1858d1a993009c9c2a0fe1a10a3.txt  3f796da882c109f14194c52e6bdaaa6c_result_png.rf.088696c1da5607dd035573c4da1448f0.txt  3fd97ff937439b870606bcbbc115c9ab_result_png.rf.3288984c096eba39b5eee73ab55c5621.txt  4110ed9c-162f-4eef-aaeb-eaac241d11a1_result_result_png.rf.3de4606b7f78d22c3d9bc43065f541bf.txt  42ebe0b5f21381f825efee2ddfc1af57_result_png.rf.7e68ff7c8a5164d7a91864ded6d4249e.txt  43da77de7a49926a27ac3de58d5d2f46_result_png.rf.e046f2c1812d4c7b20ce5709ed9d6fa3.txt  43f30017711824527451fdff6171f253_result_png.rf.60692dc6d1824d24ffc501b956619cd0.txt  445971c8011b678eac7d3982b65f17a1_result_png.rf.7e8f51fdab6d06c27b810cd28fd48503.txt  465ce689df034ed774decbb71407165f_result_png.rf.7f82ec9884302e560c76ab3635c1388f.txt  480570e5f693ed941cb3dfa96b883ac7_result_result_png.rf.bf13761d72912522511c3cb4c86e01b6.txt  4941fc8236efc85222f6a132321e690a_result_result_png.rf.d90211b1f6b84eacbe23cfdf6d7e35be.txt  49af8cf2-c04c-466f-b491-4afb0d429226_result_png.rf.a0468e10b44b07ccc1df4e6bd9fc9064.txt  4a2e5f3945e49daf80c1d954688d3620_result_png.rf.5a87850a383ddf8e900ac421ef36f1a0.txt  4a64af69589751d291073dce1e8d52b0_result_png.rf.cab9362176a446184577543fb997cf05.txt  4afe1019-dc20-4934-9662-12e6aabd9948_result_png.rf.5aafd4c4678da77898ba3d21767b52d3.txt  4beddef0a484a796786abea1a6a0a8e0_result_png.rf.17a9d5b7b6450f0bb5cd36225b035bb6.txt  4c1bbe77658a46ce8eeeab19c4424d2c_result_png.rf.fba9493ecaef2947b846cd6672dd5b18.txt  4ee1ccf72ad9354f8571a5bd9e59dc62_result_png.rf.73b21b6455c2c3430c0cb0fd4f76395e.txt  4f7232fe36b098f430519929ea28185c_result_png.rf.7daad8ad9b8ec9996269a228203a9ef0.txt  5037667dc3db32d52371db27910c9c27_result_result_png.rf.2cf4cd4b3bca6a2dc29d916d10eac009.txt  5038876c713abbf4ff84f0e6d8b5c7dc_result_png.rf.b29c2760185443bc162b4fb885910f39.txt  5106c4052c675513bee2455f992c1f80_result_result_png.rf.04cb90205e16c41f97426ecb15dfcb62.txt  54ce9ca0-9a33-4453-96c7-3b752f0793ba_result_png.rf.866d1b7a44c6ce3914412dd4de4b754d.txt  55835426_2376151789279858_3867477553077813248_n_result_png.rf.eeef9af1a540ed5326155054329f3e40.txt  56174932_2376150799279957_8728348009126952960_n_result_png.rf.ade4794802c62c4aa7e49138fe72352d.txt  (+6 more)
src/: main.py  requirements.txt  run_tests.bat
src/als/: __init__.py  __main__.py  bootstrap.py  preflight.py  requirements.txt  run_tests.bat
src/app/: __init__.py  actions.py  dialogs.py  state.py  utils.py  window.py
src/core/: data_manager.py  dataset_versioner.py  entropy.py  feedback_validator.py  inference.py  model_manager.py  replay_buffer.py  retrain_policy.py  sample_selector.py  shadow_trainer.py  training_orchestrator.py
src/datasets/: manifest.json
src/features/: __init__.py  manual.py  shortcut_config.py  shortcut_manager.py  testorreal.py  toolbar_manager.py  toolbar_styles.py  toolbar_widget.py
(+42 files in other folders)
